<!--
   Copyright (c) Microsoft Corporation. All rights reserved.
   Licensed under the MIT License.
  -->
<resources>
    <!--    Device-->
    <string name="azure_communication_ui_audio_device_drawer_android">Android</string>
    <string name="azure_communication_ui_audio_device_drawer_speaker">Speaker</string>
    <string name="azure_communication_ui_audio_device_drawer_bluetooth">Bluetooth</string>
    <string name="azure_communication_ui_audio_device_drawer_headphone">Headset</string>
    <string name="azure_communication_ui_switch_camera_button_front">Switch to Front Camera</string>
    <string name="azure_communication_ui_switch_camera_button_back">Switch to Back Camera</string>
    <string name="azure_communication_ui_setup_audio_device_select_content_description">Select Audio Device %1$s</string>
    <string name="azure_communication_ui_selected_audio_device_announcement">%1$s audio device, selected</string>
...
