<?xml version="1.0" encoding="utf-8"?><!--
   Copyright (c) Microsoft Corporation. All rights reserved.
   Licensed under the MIT License.
  -->

<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_drawer_table"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/azure_communication_ui_corner_radius_rectangle_4dp"
    android:backgroundTint="@color/azure_communication_ui_color_bottom_drawer_background"
    />

